--- a/DuAn1/src/view/TrangChuView.form
+++ b/DuAn1/src/view/TrangChuView.form
@@ -45,21 +45,17 @@
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
-                  <Component id="menu" min="-2" max="-2" attributes="0"/>
+                  <Component id="menu" min="-2" pref="191" max="-2" attributes="0"/>
+                  <EmptySpace min="0" pref="0" max="-2" attributes="0"/>
+                  <Component id="mainPanel" min="-2" pref="1182" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="mainPanel" pref="894" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
-              <Group type="102" alignment="1" attributes="0">
-                  <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
-                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                      <Component id="mainPanel" alignment="1" max="32767" attributes="0"/>
-                      <Component id="menu" alignment="1" max="32767" attributes="0"/>
-                  </Group>
-              </Group>
+              <Component id="menu" pref="800" max="32767" attributes="0"/>
+              <Component id="mainPanel" alignment="1" max="32767" attributes="0"/>
           </Group>
         </DimensionLayout>
       </Layout>
