--- a/DuAn1/src/view/panels/CapNhatSanPhamCT.form
+++ b/DuAn1/src/view/panels/CapNhatSanPhamCT.form
@@ -459,6 +459,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="Hu&#x1ef7;"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton2ActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="jButton3">
       <Properties>
@@ -480,6 +483,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Clear Form"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton4ActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
